syntax = "proto3";

package core.v1;
option go_package = "github.com/deni12345/dae-core/proto/gen/corev1;corev1";

import "google/protobuf/timestamp.proto";

message Cursor {
  string id = 1; // Document ID for cursor-based pagination
}

message Money {
  string currency_code = 1; // e.g., "VND"
  int64 amount = 2;
}
